# monzo-cli

./: .gitmodules  Cargo.toml  README.md
src/: auth.rs  cli.rs  lib.rs  main.rs
